# NPU-Dialect

./: .gitignore  CMakeLists.txt
docs/: roadmap.md  vertical_fusion_design.md
include/npu/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  CostModel.cpp  OperatorTilingSpec.cpp
lib/Transforms/: BufferizePass.cpp  CMakeLists.txt  CoreMappingPass.cpp  CostEvaluatePass.cpp  DMASchedulingPass.cpp  FusionPass.cpp  OutlineFusedGroupsPass.cpp  Pipeline.cpp  SRAMAllocationPass.cpp  SpatialTilingPass.cpp  SpillHandlingPass.cpp  TemporalTilingPass.cpp
test/: conv2d_relu.mlir  faster_rcnn_backbone.mlir  lit.cfg.py  lit.site.cfg.py  llama_attention.mlir  llama_tiny_full.mlir  matmul_relu.mlir  mlp.mlir  mobilenet_block.mlir  mobilenetv2_full.mlir  resnet18_full.mlir  resnet50_block.mlir  resnet_block.mlir  yolo_block.mlir  yolo_tiny_full.mlir
test/lit/: batch_matmul_tiling.mlir  bufferize_dma.mlir  cost_evaluate.mlir  fusion_matmul_relu.mlir  outline_groups.mlir  spatial_tiling_conv2d.mlir  spatial_tiling_matmul.mlir  static_shapes.mlir  temporal_tiling_matmul.mlir
test/models/: alexnet.mlir  autoencoder.mlir  autoencoder_deep.mlir  autoencoder_wide.mlir  bert_base.mlir  bert_large.mlir  bert_medium.mlir  bert_small.mlir  bert_tiny.mlir  centernet.mlir  convnext_base.mlir  convnext_large.mlir  convnext_small.mlir  convnext_tiny.mlir  cyclegan_generator.mlir  dcgan_generator.mlir  dcgan_generator_large.mlir  deeplabv3_resnet50.mlir  deeplabv3plus_resnet50.mlir  deit_base.mlir  deit_small.mlir  deit_tiny.mlir  (+88 more)
tools/: gen_model_mlir.py  torch2npu.py
(+19 files in other folders)
